# journal-utils

./: README.md
bash/: .zshrc
python/: main.py  pyproject.toml  stats.py
shell/: .zshrc  je.sh  zshrc
